--- a/todos.html
+++ b/todos.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="./styles/default.css" />
+
         <meta charset="utf-8">
         <title>todos</title>
     </head>
